# keys

./: .breakpoints  POA.txt  Weblogs.json  allowedKeys(v1).json  allowedKeys.json  i_key.txt  legacykeys(v1).json  main.py  messagestore.json  one.py  pyproject.toml  reset.txt  rt.txt  rt2fa.txt  text.txt  uncomment.py
templates/: Sorry.html  blank.html  color.html  data-use.html  free_temp.html  iframes.html  index.html  landing.html  methods.html  output.html  reset.html  script.js  session2.html  sign-up.html  style.css  test.html  the-game.html
