[tool.poetry]
name = "repl_python3_keys"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.0.1"
replit = "^3.2.4"
Quart = "^0.15.1"
Quart-Session = "^1.0.3"
aioredis = "^2.0.0"
Flask-SocketIO = "^5.1.1"
python-socketio = "^5.4.0"
python-engineio = "^4.2.1"
Flask-SQLAlchemy = "^2.5.1"
pusher = "^3.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
